# Turtlefied

./: README.md
arduino_fw/: servo_interface.ino
modarm_controller_pkg/: CMakeLists.txt  package.xml  servo_controller.xml
modarm_controller_pkg/config/: arm_controllers.yaml  modarm.rviz
modarm_controller_pkg/include/modarm_controller_pkg/: servo_interface.hpp
modarm_controller_pkg/launch/: controller.launch.py  real_arm_bringup.launch.py
modarm_controller_pkg/src/: arm_control_hw.cpp  move_to_pose.cpp  servo_interface.cpp  test_trigger.cpp
modarm_controller_pkg/urdf/: arm.urdf.xacro  arm_gazebo.xacro  arm_ros2_control.xacro
modpi_ik_pkg/: CMakeLists.txt  package.xml
modpi_ik_pkg/config/: arm.srdf  controllers.yaml  kinematics.yaml  ompl_planning.yaml  slam.rviz  turtlefied.srdf
modpi_ik_pkg/src/: arm_ik.cpp
modpi_ik_pkg/srv/: SetArmPose.srv
turtlefied_pkg/: CMakeLists.txt  package.xml
turtlefied_pkg/config/: slam.rviz  t_bt_ros2.xml
turtlefied_pkg/gazebo/: turtlefied.model
turtlefied_pkg/include/turtlefied_pkg/: check_if_succeed.hpp  compute_obj_to_pose.hpp  disinfection_mode.hpp  explore_client.hpp  get_object_pose.hpp  get_random_pose.hpp  is_distance_reached.hpp  is_map_complete.hpp  is_return_to_origin.hpp  is_validate_pose.hpp  move_arm.hpp  navigate_to_obj.hpp  obj_broadcaster.hpp  return_to_orig.hpp  robot_pause.hpp  robot_resume.hpp  save_map.hpp  shared_currpose.hpp  shared_data_storage.hpp  shared_mapstatus.hpp  shared_objpose.hpp  shared_pose.hpp  shared_rejectedpose.hpp
turtlefied_pkg/launch/: bringup.launch.py  modpi_controller_launch.py  modpi_ik_launch.py  t_simulation_slam_launch.py
turtlefied_pkg/meshes/collada/: ballcaster.dae  roller.dae
turtlefied_pkg/meshes/stl/: arm_base.stl  arm_elbow.stl  arm_forearm.stl  arm_shoulder.stl  ball_caster.stl  d435i_mount.stl  lds.stl  rollerframe.stl
turtlefied_pkg/src/: bt_decision.cpp  check_if_succeed.cpp  compute_obj_to_pose.cpp  disinfection_mode.cpp  explore_client.cpp  get_random_pose.cpp  is_distance_reached.cpp  is_map_complete.cpp  is_return_to_origin.cpp  is_validate_pose.cpp  move_arm.cpp  navigate_to_obj.cpp  obj_broadcaster.cpp  return_to_orig.cpp  robot_pause.cpp  robot_resume.cpp  save_map.cpp
turtlefied_pkg/urdf/: arm.xacro  materials.xacro  turtlefied_sim.urdf.xacro
